changed pics around, deleted some pics, fixed some bugs related to width of page and overflow

--- a/css/style_about.css
+++ b/css/style_about.css
@@ -1,8 +1,9 @@
 /*~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~About~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~*/
 #Wrapper {
 	margin: 0 auto;
+	/*width: 700px;*/
 	max-width: 800px;
-	min-width: 500px;
+	min-width: 600px;
 }
 
 #aboutWrapper {
